--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^2.9.4",
-    "firebase": "^10.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-table-next": "^4.0.3",
@@ -27,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+"deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "css-loader": "^6.10.0",
+    "gh-pages": "^6.1.1",
     "react-error-overlay": "^6.0.9",
     "source-map-loader": "^5.0.0",
     "style-loader": "^3.3.4"
