--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-"deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
+  "homepage": "https://github.com/AABDOU02/web-impact",
   "eslintConfig": {
     "extends": [
       "react-app",
