--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+   "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://github.com/AABDOU02/web-impact",
+  "homepage": "https://github.com/aabdou02/web-impact/",
   "eslintConfig": {
     "extends": [
       "react-app",
